
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heiDPI"
version = "1.2.0"
authors = [
  { name="Stefan Machmeier", email="stefan.machmeier@uni-heidelberg.de" },
]
description = "nDPId consumer implementation"
readme = "README.consumer.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
    "Operating System :: OS Independent",
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Security',
    'Topic :: Internet :: Log Analysis',
    'Topic :: System :: Networking :: Monitoring',
]

[project.scripts]
heiDPI = "heidpi.heiDPI_logger:main"

[project.urls]
"Homepage" = "https://github.com/stefanDeveloper/heiDPI"
"Bug Tracker" = "https://github.com/stefanDeveloper/heiDPI/issues"