[package]
name = "heidpi"
authors = ["Stefan Machmeier"]
license = "EUPL"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/stefanDeveloper/heidpi"
description = "nDPId Docker Image for packet inspection"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = { version = "*" }
log = { version = "*" }
env_logger = { version = "*" }
toml = { version = "*" }
clap = { version = "*", features = ["derive"] }
anyhow = { version = "*" }
maxminddb = { version = "*" }
valico = { version = "*" }

[build-dependencies]
anyhow = { version = "*" }